--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://LucasBorali.github.io/sneakers-product-page",
+  "homepage": "http://lucasborali.github.io/sneakers-product-page",
   "name": "sneakers-product-page",
   "version": "0.1.0",
   "private": true,
